# blog

./: LICENSE  README.md
2022_go_embed_for_migrations/: go.mod  go.sum
2023_go_embed_for_migrations/: docker-compose.yml  execution.tape  go.mod  main.go
2023_go_embed_for_migrations/migrations/: 000001_create_example_table.up.sql  000001_create_examples_table.down.sql  000001_create_examples_table.up.sql
2026_go_http_unit_test/: go.mod  go.sum  main.go  main_test.go
bash/lint/: errors.sh
bash/test/: functions.sh  test_functions.sh
bash_2018_02_24/format/: binary_ops_and_switch_cases.sh  mess.sh
boost_asio/: CMakeLists.txt
boost_asio/src/scheduler/: simple.cpp
boost_asio/src/sync/: client.cpp  server.cpp
boost_asio_2017_01_21/: CMakeLists.txt  Makefile
clang_sanitizers/address/: double_free.cpp  free.cpp  overflow.cpp
clang_sanitizers/memory/: Makefile  memory.cpp
clang_sanitizers/thread/: Makefile  race.cpp
clang_sanitizers/undefined/: Makefile  function.cpp
clang_sanitizers_2016_07_13/address/: Makefile  leak.cpp
clang_tools_2016_01_29/format_example/: CMakeLists.txt
clang_tools_2016_01_29/modernize_example/: CMakeLists.txt
clang_tools_2016_01_29/tidy_example/: CMakeLists.txt
cling_interpreter_2016_01_08/src/: useful_functions.h
fff_mock_2016_02_18/: CMakeLists.txt
fff_mock_2016_02_18/src/: both.c  both.h  modulo.h
google_mock_2016_01_22/: conanfile.txt
google_test_2015_12_22/: .gitignore  CMakeLists.txt  conanfile.txt
rickroll_module_2016_03_19/: Makefile  rickroll.c
unity_c_unit_test_2016_02_05/: CMakeLists.txt
(+39 files in other folders)
